fix: creating likes with empty body + get likes doc
